# omnidesk24

./: .gitignore  CMakeLists.txt  README.md
assets/screens/: connecting.rml  connection_dialog.rml  dashboard.rml  session_toolbar.rml  settings.rml  stats.rml
assets/styles/: theme.rcss
build-fresh/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake  imgui.ini
build-webrtc/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  cmake_install.cmake  imgui.ini
build-webrtc/tests/: CTestTestfile.cmake  cmake_install.cmake  cmake_test_discovery_1830d6bc40.json  cmake_test_discovery_21d234caa1.json  cmake_test_discovery_e209d6eb83.json  omnidesk_integration_tests[1]_include.cmake  omnidesk_integration_tests[1]_tests.cmake  omnidesk_tests[1]_include.cmake  omnidesk_tests[1]_tests.cmake  omnidesk_visual_tests[1]_include.cmake  omnidesk_visual_tests[1]_tests.cmake
cmake/: FetchDeps.cmake  FetchLibDataChannel.cmake  FetchOpenH264.cmake  FindVAAPI.cmake  Platform.cmake  mbedtls_user_config.h
docs/superpowers/plans/: 2026-03-18-webrtc-migration.md
docs/superpowers/specs/: 2026-03-18-webrtc-migration-design.md
scripts/: test_signaling.py
src/: main.cpp  server_main.cpp
src/capture/: capture.h  capture_factory.cpp  dxgi_capture.cpp  dxgi_capture.h  pipewire_capture.cpp  pipewire_capture.h  x11_capture.cpp  x11_capture.h
src/codec/: adaptive_quality.cpp  adaptive_quality.h  codec_factory.cpp  codec_factory.h  decoder.h  encoder.h  mf_encoder.cpp  mf_encoder.h  nvenc_encoder.cpp  nvenc_encoder.h  openh264_decoder.cpp  openh264_decoder.h  openh264_encoder.cpp  openh264_encoder.h  openh264_loader.cpp  openh264_loader.h  quality_tuner.cpp  quality_tuner.h  rate_control.cpp  rate_control.h  vaapi_encoder.cpp  vaapi_encoder.h
src/codec/omni/: bitstream.cpp  bitstream.h  omni_decoder.cpp  omni_decoder.h  omni_encoder.cpp  omni_encoder.h  omni_types.h  rans_codec.cpp  rans_codec.h  scroll_detector.cpp  scroll_detector.h  tile_decoder.cpp  tile_decoder.h  tile_encoder.cpp  tile_encoder.h
src/core/: clock.cpp  clock.h  logger.cpp  logger.h  ring_buffer.h  simd_dct.cpp  simd_dct.h  simd_dct_avx2.cpp  simd_predict.cpp  simd_predict.h  simd_predict_avx2.cpp  simd_utils.cpp  simd_utils.h  simd_utils_avx2.cpp  simd_ycocg.cpp  simd_ycocg.h  simd_ycocg_avx2.cpp  thread_pool.cpp  thread_pool.h  types.h
src/diff/: content_classifier.cpp  content_classifier.h  rect_merger.cpp  rect_merger.h  region_detector.h  simd_diff.cpp  simd_diff.h
src/input/: cursor_predictor.cpp  cursor_predictor.h  input_handler.cpp  input_handler.h  input_injector.cpp  input_injector.h
src/render/: cursor_overlay.cpp  cursor_overlay.h  gl_proc.cpp  gl_proc.h  gl_renderer.cpp  gl_renderer.h  sharpening.cpp  sharpening.h
src/session/: host_session.cpp  host_session.h  viewer_session.cpp  viewer_session.h
src/signaling/: database.cpp  database.h  signaling_client.cpp  signaling_client.h  signaling_server.cpp  signaling_server.h  tcp_channel.cpp  tcp_channel.h  user_id.cpp  user_id.h  wire_format.h
src/transport/: congestion.cpp  congestion.h  fec.cpp  fec.h  framer.cpp  framer.h  hole_punch.cpp  hole_punch.h  protocol.h  tcp_channel.cpp  tcp_channel.h  udp_channel.cpp  udp_channel.h
src/ui/: app.cpp  app.h  connection_dialog.cpp  connection_dialog.h  d2d_renderer.cpp  d2d_renderer.h  dashboard.cpp  dashboard.h  dashboard_panel.cpp  dashboard_panel.h  history_panel.cpp  history_panel.h  session_view.cpp  session_view.h  settings_panel.cpp  settings_panel.h  stats_overlay.cpp  stats_overlay.h  theme.cpp  theme.h
src/webrtc/: webrtc_session.cpp  webrtc_session.h
tests/: CMakeLists.txt  test_relay.py
tests/analyzer/: CMakeLists.txt  analyzer_engine.cpp  analyzer_engine.h  codec_analyzer.cpp  latency_profiler.h  quality_metrics.h  report_generator.cpp  report_generator.h  resource_monitor.cpp  resource_monitor.h
tests/benchmark/: CMakeLists.txt  bench_codec_compare.cpp  bench_color_convert.cpp  bench_encode.cpp  bench_fec.cpp  bench_pipeline.cpp  bench_simd_diff.cpp
tests/content/: generate_test_frames.h
tests/integration/: test_capture_encode_pipeline.cpp  test_data_channel_flow.cpp  test_signaling_flow.cpp  test_transport_loopback.cpp  test_webrtc_e2e.cpp
tests/unit/: test_congestion.cpp  test_content_classifier.cpp  test_cursor_predictor.cpp  test_dct.cpp  test_fec.cpp  test_framer.cpp  test_protocol.cpp  test_quality_tuner.cpp  test_rans.cpp  test_rect_merger.cpp  test_ring_buffer.cpp  test_scroll_detect.cpp  test_simd_utils.cpp  test_tile_codec.cpp  test_user_id.cpp  test_ycocg.cpp
tests/visual/: test_encode_quality.cpp
